# bedrock-agentcore-graphic-recording-workshop

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .mise.toml  Dockerfile  README.md  constraints-workshop.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
agent/: __init__.py  actions.py  adk_agent.py  agentcore_entrypoint.py  models.py  runtime_contract.py  runtime_entrypoint.py  runtime_workflows.py  strands_agent.py  tools.py
docs/: publication-checklist.md  workshop-deploy.md
scripts/: bootstrap-gcp-project.sh  check-publication-safety.sh  cleanup-aws-resources.sh  cleanup-gcp-resources.sh  configure-runtime-iam.sh  deploy-agent-runtime.py  deploy-agentcore-runtime.py  deploy-apprunner.sh  deploy-cloud-run.sh  deploy-ecs-express.sh  diagnose-deployment.sh  preflight-aws-cloudshell.sh  preflight-cloud-shell.sh
tests/: test_phase1_flow.py
web/: __init__.py  agent_client.py  auth.py  logging_config.py  main.py
web/static/: styles.css
web/templates/: index.html  login.html
web/templates/partials/: graphic.html  job.html  job_content.html  progress.html  stepper.html  summary.html
