[project]
name = "gemini-enterprise-agent-platform-demo"
version = "0.1.0"
description = "Phase 1 mock demo: summarize a blog URL and render a graphic recording SVG."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "trafilatura>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
adk = [
  "google-adk>=1.0.0",
]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
