[project]
name = "gemini-enterprise-agent-platform-demo"
version = "0.1.0"
description = "Workshop demo: deploy an ADK Agent Runtime workflow that turns a blog URL into a graphic recording."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "cloudpickle>=3.1.0",
  "google-cloud-aiplatform[agent_engines,adk]>=1.112.0",
  "google-cloud-storage>=2.18.0",
  "google-adk>=1.18.0",
  "google-genai>=1.66.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "trafilatura>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
